added debug endpoints to delete rule and rule_error_key
